fixes font size on smaller laptop screens

--- a/client/src/components/Landing/Landing.css
+++ b/client/src/components/Landing/Landing.css
@@ -61,3 +61,10 @@
     margin-left: 15px;
   }
 }
+
+
+@media only screen and (min-width: 1920px) {
+  .intro {
+    font-size: 8rem;
+  }
+}
